--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Image header -->
   <header class="w3-display-container w3-wide" style="padding-bottom:32px;" id="Home">
-    <img class="w3-image" src="https://images.unsplash.com/photo-1605001011156-cbf0b0f67a51?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80" alt="Photo by Jamie Street" width="1600" height="1060">
+    <img class="w3-image" src="images/parallax.jpeg" alt="Parallax Photo" width="1600" height="1060">
     <div class="w3-display-left w3-padding-large">
       <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>JULIA HUIMING WANG</b></h1>
     </div>
@@ -61,7 +61,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     Previously, I obtained my B.S. in Computer Science from Stanford University, where I was a research tech in Stephen Baccus's lab, studying deep learning models of the retina. General research interests include brain states, learning & memory, and neural manifolds.
       </p>
       <div class="w3-col m6 w3-center w3-padding-large">
-      <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+      <img src="images/portrait.jpeg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
     </div>
     <div class="w3-col m6 w3-hide-small w3-padding-large">
         <p class="w3-white w3-text-black w3-left-align">
@@ -99,34 +99,34 @@ and is wrapped around the whole page content, except for the footer in this exam
       </p>
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="https://images.unsplash.com/photo-1506993708131-b0bf29d16b76?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80" alt="Photo by Sam manns" style="width:100%">
+        <img src="images/brain_states.png" alt="Brain States Photo" style="width:100%">
         <div class="w3-container">
           <h3>Brain States</h3>
           <p>A manifold of heterogeneous vigilance states across cortical areas</p>
           <p> Presented at SFN 2021, COSYNE 2022, SFN 2022 </p>
-          <p><button class="w3-button w3-round w3-pale-red w3-block"><a href="#Contact">POSTER</a></button></p>
+          <p><button class="w3-button w3-round w3-pale-red w3-block"><a href="images/Cosyne22_poster_portrait.pdf" download="Wang_Cosyne_22">POSTER</a></button></p>
         </div>
       </div>
     </div>
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="https://images.unsplash.com/photo-1553322378-eb94e5966b0c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" alt="Photo by Manuel Meza" style="width:100%">
+        <img src="images/retina" alt="Retina Interneurons photo" style="width:100%">
         <div class="w3-container">
           <h3>Retina Models</h3>
           <p>Deep learning models of the retina show ethological relevance and correspondence to interneurons</p>
-          <p><button class="w3-button w3-round w3-pale-red w3-block"><a href="#Contact">PAPER</a></button></p>
+          <p><button class="w3-button w3-round w3-pale-red w3-block"><a href="https://www.biorxiv.org/content/10.1101/340943v5.abstract">PAPER</a></button></p>
         </div>
       </div>
     </div>
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="https://images.unsplash.com/photo-1539440860461-f30442bf7ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" alt="Photo by Wieger Stienstra" style="width:100%">
+        <img src="images/synaptic_scaling" alt="Synaptic Scaling Photo" style="width:100%">
         <div class="w3-container">
           <h3>Biological Normalization Strategies</h3>
           <p>Biologically inspired normalization patterns in Deep Neural Networks compare to existing methods</p>
-          <p><button class="w3-button w3-round w3-pale-red w3-block"><a href="#Contact">PAPER</a></button></p>
+          <p><button class="w3-button w3-round w3-pale-red w3-block"><a href="https://direct.mit.edu/neco/article/33/12/3179/107074/A-Correspondence-Between-Normalization-Strategies">PAPER</a></button></p>
         </div>
       </div>
     </div>
@@ -160,6 +160,11 @@ and is wrapped around the whole page content, except for the footer in this exam
           <p class="w3-left-align w3-white w3-text-black">Kids with Dreams is Stanford's only organization dedicated to working with individuals with disabilites. We service over 400 families in the Bay Area and provide 100+ hours of programming a quarter through 10+ programs. We partner Stanford volunteers with local community organizations as well as organize many of our own programs and events.
           <hr>
         </div>
+				<div class="w3-container">
+          <h5 class="w3-opacity"><b> AI4ALL / Teaching Assistant</b></h5>
+          <p class="w3-left-align w3-white w3-text-black">AI4ALL started as a summer program at Stanford for high school girls to introduce them to AI and CS. It is now a non-profit with 16 sites across the country, targeting different underrepresented demographics. I was involved as a TA & program evaluator for the Stanford and UW chapters
+          <hr>
+        </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b> Stanford ResEd / Resident Computer Consultant</b></h5>
           <p class="w3-left-align w3-white w3-text-black"> As an RCC, similar to an RA, mentored and assisted freshman. Planned dorm-wide activities and trips such as to Monterey Bay Aquarium, Yosemite, and cultural cook nights.
@@ -188,30 +193,41 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/sound.jpg" style="width:100%">
-    <img src="/w3images/woods.jpg" style="width:100%">
-    <img src="/w3images/rock.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
+    <img src="images/1.jepg" style="width:100%">
+    <img src="images/2.jepg" style="width:100%">
+    <img src="images/3.jepg" style="width:100%">
+    <img src="images/4.jepg" style="width:100%">
+    <img src="images/5.jepg" style="width:100%">
+    <img src="images/IMG_0023.jpeg" style="width:100%">
+		<img src="images/IMG_1670.jpeg" style="width:100%">
+		<img src="images/IMG_2348.jpeg" style="width:100%">
+		<img src="images/IMG_3491.jpeg" style="width:100%">
+		<img src="images/IMG_4969.jpeg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/coffee.jpg" style="width:100%">
-    <img src="/w3images/bridge.jpg" style="width:100%">
-    <img src="/w3images/notebook.jpg" style="width:100%">
-    <img src="/w3images/london.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/avatar_g.jpg" style="width:100%">
+    <img src="images/IMG_0024.jpeg" style="width:100%">
+    <img src="images/IMG_0025.jpeg" style="width:100%">
+    <img src="images/IMG_0026.jpeg" style="width:100%">
+    <img src="images/IMG_0265.jpeg" style="width:100%">
+    <img src="images/IMG_0430.jpeg" style="width:100%">
+    <img src="images/IMG_0668.jpeg" style="width:100%">
+		<img src="images/IMG_2219.jpeg" style="width:100%">
+		<img src="images/IMG_2734.jpeg" style="width:100%">
+		<img src="images/IMG_3650.jpeg" style="width:100%">
+		<img src="images/IMG_5020.jpeg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/workbench.jpg" style="width:100%">
-    <img src="/w3images/gondol.jpg" style="width:100%">
-    <img src="/w3images/skies.jpg" style="width:100%">
-    <img src="/w3images/lights.jpg" style="width:100%">
-    <img src="/w3images/workshop.jpg" style="width:100%">
+    <img src="images/IMG_0686.jpeg" style="width:100%">
+    <img src="images/IMG_0960.jpeg" style="width:100%">
+    <img src="images/IMG_1041.jpeg" style="width:100%">
+    <img src="images/IMG_1042.jpeg" style="width:100%">
+    <img src="images/IMG_1043.jpeg" style="width:100%">
+    <img src="images/IMG_1044.jpeg" style="width:100%">
+		<img src="images/IMG_2226.jpeg" style="width:100%">
+		<img src="images/IMG_3347.jpeg" style="width:100%">
+		<img src="images/IMG_4663.jpeg" style="width:100%">
   </div>
 </div>
 
@@ -236,9 +252,9 @@ and is wrapped around the whole page content, except for the footer in this exam
   <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
   <footer class="w3-container w3-pale-red w3-center w3-margin-top">
     <p>Find me on social media.</p>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <i class="fa-solid fa-graduation-cap"></i>
+    <i class="fa fa-twitter w3-hover-opacity" href="https://twitter.com/juliah_wang"></i>
+    <i class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/julia-wang-888b53126/"></i>
+    <i class="fa-solid fa-graduation-cap" href="https://scholar.google.com/citations?user=FSpvOXUAAAAJ&hl=en"></i>
   </footer>
 
 <script>
