fix images not showing up and nav bar order

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 <div class="w3-bar w3-white w3-text-black">
   <h2 class="w3-left w3-tag w3-pale-red w3-round">JULIA WANG</h2>
   <a href="#Contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">CONTACT</a>
-  <a href="#About" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">ABOUT</a>
+	<a href="#Art" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">ART</a>
+	<a href="#Outreach" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">OUTREACH</a>
   <a href="#Projects" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">PROJECTS</a>
-  <a href="#Outreach" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">OUTREACH</a>
-  <a href="#Art" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">ART</a>
+  <a href="#About" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">ABOUT</a>
+
   <a href="#Home" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right" style="margin-top:10px;">HOME</a>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-medium w3-hide-large" style="margin-top:10px;" onclick="myFunction()">&#9776;</a>
 </div>
@@ -111,7 +112,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="images/retina" alt="Retina Interneurons photo" style="width:100%">
+        <img src="images/retina.png" alt="Retina Interneurons photo" style="width:100%">
         <div class="w3-container">
           <h3>Retina Models</h3>
           <p>Deep learning models of the retina show ethological relevance and correspondence to interneurons</p>
@@ -122,7 +123,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="images/synaptic_scaling" alt="Synaptic Scaling Photo" style="width:100%">
+        <img src="images/synaptic_scaling.png" alt="Synaptic Scaling Photo" style="width:100%">
         <div class="w3-container">
           <h3>Biological Normalization Strategies</h3>
           <p>Biologically inspired normalization patterns in Deep Neural Networks compare to existing methods</p>
@@ -193,41 +194,41 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="images/1.jepg" style="width:100%">
-    <img src="images/2.jepg" style="width:100%">
-    <img src="images/3.jepg" style="width:100%">
-    <img src="images/4.jepg" style="width:100%">
-    <img src="images/5.jepg" style="width:100%">
-    <img src="images/IMG_0023.jpeg" style="width:100%">
-		<img src="images/IMG_1670.jpeg" style="width:100%">
-		<img src="images/IMG_2348.jpeg" style="width:100%">
-		<img src="images/IMG_3491.jpeg" style="width:100%">
-		<img src="images/IMG_4969.jpeg" style="width:100%">
+    <img src="gallery/1.jepg" style="width:100%">
+    <img src="gallery/2.jepg" style="width:100%">
+    <img src="gallery/3.jepg" style="width:100%">
+    <img src="gallery/4.jepg" style="width:100%">
+    <img src="gallery/5.jepg" style="width:100%">
+    <img src="gallery/IMG_0023.jpeg" style="width:100%">
+		<img src="gallery/IMG_1670.jpeg" style="width:100%">
+		<img src="gallery/IMG_2348.jpeg" style="width:100%">
+		<img src="gallery/IMG_3491.jpeg" style="width:100%">
+		<img src="gallery/IMG_4969.jpeg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="images/IMG_0024.jpeg" style="width:100%">
-    <img src="images/IMG_0025.jpeg" style="width:100%">
-    <img src="images/IMG_0026.jpeg" style="width:100%">
-    <img src="images/IMG_0265.jpeg" style="width:100%">
-    <img src="images/IMG_0430.jpeg" style="width:100%">
-    <img src="images/IMG_0668.jpeg" style="width:100%">
-		<img src="images/IMG_2219.jpeg" style="width:100%">
-		<img src="images/IMG_2734.jpeg" style="width:100%">
-		<img src="images/IMG_3650.jpeg" style="width:100%">
-		<img src="images/IMG_5020.jpeg" style="width:100%">
+    <img src="gallery/IMG_0024.jpeg" style="width:100%">
+    <img src="gallery/IMG_0025.jpeg" style="width:100%">
+    <img src="gallery/IMG_0026.jpeg" style="width:100%">
+    <img src="gallery/IMG_0265.jpeg" style="width:100%">
+    <img src="gallery/IMG_0430.jpeg" style="width:100%">
+    <img src="gallery/IMG_0668.jpeg" style="width:100%">
+		<img src="gallery/IMG_2219.jpeg" style="width:100%">
+		<img src="gallery/IMG_2734.jpeg" style="width:100%">
+		<img src="gallery/IMG_3650.jpeg" style="width:100%">
+		<img src="gallery/IMG_5020.jpeg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="images/IMG_0686.jpeg" style="width:100%">
-    <img src="images/IMG_0960.jpeg" style="width:100%">
-    <img src="images/IMG_1041.jpeg" style="width:100%">
-    <img src="images/IMG_1042.jpeg" style="width:100%">
-    <img src="images/IMG_1043.jpeg" style="width:100%">
-    <img src="images/IMG_1044.jpeg" style="width:100%">
-		<img src="images/IMG_2226.jpeg" style="width:100%">
-		<img src="images/IMG_3347.jpeg" style="width:100%">
-		<img src="images/IMG_4663.jpeg" style="width:100%">
+    <img src="gallery/IMG_0686.jpeg" style="width:100%">
+    <img src="gallery/IMG_0960.jpeg" style="width:100%">
+    <img src="gallery/IMG_1041.jpeg" style="width:100%">
+    <img src="gallery/IMG_1042.jpeg" style="width:100%">
+    <img src="gallery/IMG_1043.jpeg" style="width:100%">
+    <img src="gallery/IMG_1044.jpeg" style="width:100%">
+		<img src="gallery/IMG_2226.jpeg" style="width:100%">
+		<img src="gallery/IMG_3347.jpeg" style="width:100%">
+		<img src="gallery/IMG_4663.jpeg" style="width:100%">
   </div>
 </div>
 
