--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@ and is wrapped around the whole page content, except for the footer in this exam
       </div>
     </div>
   </div>
+</div>
 
-<!-- Activities section -->
+<!-- Outreach section -->
   <div class="w3-white" id="Outreach">
     <div class="w3-container">
       <div class="w3-center w3-padding-32">
@@ -141,6 +142,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <p class="w3-left-align w3-white w3-text-black">
       My proudest moments have been in service and education. I am driven by two main goals: increasing diversity & inclusion in STEM and Tech, and service and justice for the disablility community.
       </p>
+			<div class="w3-row w3-center w3-dark-grey w3-padding-16">
       <div class="w3-container">
           <h5 class="w3-opacity"><b>DIAS / Vice President</b></h5>
           <p class="w3-left-align w3-white w3-text-black">DIAS is CSHL's diversity organization for trainees. We exist to support trainees from underrepresented groups, such as URMs, LGBTQIA+, and disability.
@@ -180,7 +182,9 @@ and is wrapped around the whole page content, except for the footer in this exam
           <hr>
         </div>
     </div>
+	</div>
   </div>
+</div>
 
 <div class="w3-opacity" id= "Artwork">
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span>
@@ -194,11 +198,11 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="gallery/1.jepg" style="width:100%">
-    <img src="gallery/2.jepg" style="width:100%">
-    <img src="gallery/3.jepg" style="width:100%">
-    <img src="gallery/4.jepg" style="width:100%">
-    <img src="gallery/5.jepg" style="width:100%">
+    <img src="gallery/1.jpeg" style="width:100%">
+    <img src="gallery/2.jpeg" style="width:100%">
+    <img src="gallery/3.jpeg" style="width:100%">
+    <img src="gallery/4.jpeg" style="width:100%">
+    <img src="gallery/5.jpeg" style="width:100%">
     <img src="gallery/IMG_0023.jpeg" style="width:100%">
 		<img src="gallery/IMG_1670.jpeg" style="width:100%">
 		<img src="gallery/IMG_2348.jpeg" style="width:100%">
