small style changes

--- a/index.html
+++ b/index.html
@@ -76,19 +76,23 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter w3-section">
     <span class="w3-xlarge"><i class="fa-solid fa-brain fa-2xl"></i></span><br>
-    <p>Neuroscience</p>
+    <p></p>
+		Neuroscience
   </div>
   <div class="w3-quarter w3-section">
     <span class="w3-xlarge"><i class="fa-solid fa-code-merge fa-2xl"></i></span><br>
-    <p>Deep Learning</p>
+    <p></p>
+		AI
   </div>
   <div class="w3-quarter w3-section">
     <span class="w3-xlarge"><i class="fa-solid fa-book fa-2xl"></i></span><br>
-    <p>Education</p>
+    <p></p>
+		Education
   </div>
   <div class="w3-quarter w3-section">
     <span class="w3-xlarge"><i class="fa-solid fa-hand-holding-hand fa-2xl"></i></span><br>
-    <p>Service</p>
+    <p></p>
+		Service
   </div>
 </div>
 
@@ -145,40 +149,40 @@ and is wrapped around the whole page content, except for the footer in this exam
 			<div class="w3-row w3-center w3-dark-grey w3-padding-16">
       <div class="w3-container">
           <h5 class="w3-opacity"><b>DIAS / Vice President</b></h5>
-          <p class="w3-left-align w3-white w3-text-black">DIAS is CSHL's diversity organization for trainees. We exist to support trainees from underrepresented groups, such as URMs, LGBTQIA+, and disability.
+          <p class="w3-left-align w3-text-black">DIAS is CSHL's diversity organization for trainees. We exist to support trainees from underrepresented groups, such as URMs, LGBTQIA+, and disability.
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Practical Programming Lecture Series / Organizer</b></h5>
-          <p class="w3-left-align w3-white w3-text-black">The Practical Programming series aims to bring together members of the QB community and share practical knowledge for computational work.
+          <p class="w3-left-align w3-text-black">The Practical Programming series aims to bring together members of the QB community and share practical knowledge for computational work.
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>URP Python Course / Organizer & Lecturer</b></h5>
-          <p class="w3-left-align w3-white w3-text-black">An introductory python course for undergraduate research participants (URPs).
+          <p class="w3-left-align w3-text-black">An introductory python course for undergraduate research participants (URPs).
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b> Kids with Dreams / President</b></h5>
-          <p class="w3-left-align w3-white w3-text-black">Kids with Dreams is Stanford's only organization dedicated to working with individuals with disabilites. We service over 400 families in the Bay Area and provide 100+ hours of programming a quarter through 10+ programs. We partner Stanford volunteers with local community organizations as well as organize many of our own programs and events.
+          <p class="w3-left-align w3-text-black">Kids with Dreams is Stanford's only organization dedicated to working with individuals with disabilites. We service over 400 families in the Bay Area and provide 100+ hours of programming a quarter through 10+ programs. We partner Stanford volunteers with local community organizations as well as organize many of our own programs and events.
           <hr>
         </div>
 				<div class="w3-container">
           <h5 class="w3-opacity"><b> AI4ALL / Teaching Assistant</b></h5>
-          <p class="w3-left-align w3-white w3-text-black">AI4ALL started as a summer program at Stanford for high school girls to introduce them to AI and CS. It is now a non-profit with 16 sites across the country, targeting different underrepresented demographics. I was involved as a TA & program evaluator for the Stanford and UW chapters
+          <p class="w3-left-align w3-text-black">AI4ALL started as a summer program at Stanford for high school girls to introduce them to AI and CS. It is now a non-profit with 16 sites across the country, targeting different underrepresented demographics. I was involved as a TA & program evaluator for the Stanford and UW chapters
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b> Stanford ResEd / Resident Computer Consultant</b></h5>
-          <p class="w3-left-align w3-white w3-text-black"> As an RCC, similar to an RA, mentored and assisted freshman. Planned dorm-wide activities and trips such as to Monterey Bay Aquarium, Yosemite, and cultural cook nights.
+          <p class="w3-left-align w3-text-black"> As an RCC, similar to an RA, mentored and assisted freshman. Planned dorm-wide activities and trips such as to Monterey Bay Aquarium, Yosemite, and cultural cook nights.
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Classes Taught</b></h5>
-          <p class="w3-left-align w3-white w3-text-black"> Diverse Perspectives on Disabilities (Stanford)
-            <p class="w3-left-align w3-white w3-text-black"> Introduction to Computing at Stanford (Stanford)
-            <p class="w3-left-align w3-white w3-text-black"> Peer Counseling (Stanford)
-            <p class="w3-left-align w3-white w3-text-black"> Coding Camp for Girls (CSHL)
+          <p class="w3-left-align w3-text-black"> Diverse Perspectives on Disabilities (Stanford)
+            <p class="w3-left-align w3-text-black"> Introduction to Computing at Stanford (Stanford)
+            <p class="w3-left-align w3-text-black"> Peer Counseling (Stanford)
+            <p class="w3-left-align w3-text-black"> Coding Camp for Girls (CSHL)
           <hr>
         </div>
     </div>
@@ -257,9 +261,9 @@ and is wrapped around the whole page content, except for the footer in this exam
   <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
   <footer class="w3-container w3-pale-red w3-center w3-margin-top">
     <p>Find me on social media.</p>
-    <i class="fa fa-twitter w3-hover-opacity" href="https://twitter.com/juliah_wang"></i>
-    <i class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/julia-wang-888b53126/"></i>
-    <i class="fa-solid fa-graduation-cap" href="https://scholar.google.com/citations?user=FSpvOXUAAAAJ&hl=en"></i>
+    <a class="fa fa-twitter w3-hover-opacity" href="https://twitter.com/juliah_wang"></a>
+    <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/julia-wang-888b53126/"></a>
+    <a class="fa-solid fa-graduation-cap" href="https://scholar.google.com/citations?user=FSpvOXUAAAAJ&hl=en"></a>
   </footer>
 
 <script>
