--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     body {font-family: "Source Sans Pro"}
     </style>
   </head>
-
+<script>
 	/* Style the navbar */
 #navbar {
   overflow: hidden;
@@ -68,6 +68,7 @@ function navFunction() {
     navbar.classList.remove("sticky");
   }
 }
+</script>
 <!-- Navigation bar with links -->
 <div class="w3-bar w3-white w3-text-black" id="navbar">
   <h2 class="w3-left w3-tag w3-pale-red w3-round">JULIA WANG</h2>
